--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,2 @@
-/.idea/
-/node_modules/
-/dist/
-/misc/
-/app/css/
-/**/*.ai
-/**/*.log
-/**/*.pdf
-/**/*.psd
-/**/*.sublime*
-/**/Thumbs.db
-/**/.DS_Store
-//libs32//libs64/
+/libs32/*
+/libs64/*
