--- a/PKB/pkb.rc
+++ b/PKB/pkb.rc
@@ -1,3 +1,3 @@
 <!DOCTYPE RCC>
 <RCC version="1.0"/>
-IDI_ICON1               ICON    DISCARDABLE     "pkb.ico"
+IDI_ICON1               ICON    DISCARDABLE     "fav.ico"
