--- a/build-PKB-Desktop_Qt_5_11_0_MSVC2017_64bit-Release/Makefile
+++ b/build-PKB-Desktop_Qt_5_11_0_MSVC2017_64bit-Release/Makefile
@@ -147,6 +147,8 @@ Makefile: ..\PKB\PKB.pro C:\Qt\5.11.0\msvc2017_64\mkspecs\win32-msvc\qmake.conf 
 		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_multimediawidgets_private.pri \
 		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_network.pri \
 		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_network_private.pri \
+		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_networkauth.pri \
+		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_networkauth_private.pri \
 		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_nfc.pri \
 		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_nfc_private.pri \
 		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_opengl.pri \
@@ -178,6 +180,14 @@ Makefile: ..\PKB\PKB.pro C:\Qt\5.11.0\msvc2017_64\mkspecs\win32-msvc\qmake.conf 
 		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_quicktemplates2_private.pri \
 		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_quickwidgets.pri \
 		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_quickwidgets_private.pri \
+		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_remoteobjects.pri \
+		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_remoteobjects_private.pri \
+		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_repparser.pri \
+		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_repparser_private.pri \
+		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_script.pri \
+		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_script_private.pri \
+		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_scripttools.pri \
+		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_scripttools_private.pri \
 		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_scxml.pri \
 		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_scxml_private.pri \
 		C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_sensors.pri \
@@ -226,6 +236,7 @@ Makefile: ..\PKB\PKB.pro C:\Qt\5.11.0\msvc2017_64\mkspecs\win32-msvc\qmake.conf 
 		C:\Qt\5.11.0\msvc2017_64\mkspecs\features\qt_config.prf \
 		C:\Qt\5.11.0\msvc2017_64\mkspecs\win32-msvc\qmake.conf \
 		C:\Qt\5.11.0\msvc2017_64\mkspecs\features\spec_post.prf \
+		.qmake.stash \
 		C:\Qt\5.11.0\msvc2017_64\mkspecs\features\exclusive_builds.prf \
 		C:\Qt\5.11.0\msvc2017_64\mkspecs\common\msvc-version.conf \
 		C:\Qt\5.11.0\msvc2017_64\mkspecs\features\toolchain.prf \
@@ -327,6 +338,8 @@ C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_multimediawidgets.pri:
 C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_multimediawidgets_private.pri:
 C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_network.pri:
 C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_network_private.pri:
+C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_networkauth.pri:
+C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_networkauth_private.pri:
 C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_nfc.pri:
 C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_nfc_private.pri:
 C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_opengl.pri:
@@ -358,6 +371,14 @@ C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_quickparticles_private.pri:
 C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_quicktemplates2_private.pri:
 C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_quickwidgets.pri:
 C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_quickwidgets_private.pri:
+C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_remoteobjects.pri:
+C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_remoteobjects_private.pri:
+C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_repparser.pri:
+C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_repparser_private.pri:
+C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_script.pri:
+C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_script_private.pri:
+C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_scripttools.pri:
+C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_scripttools_private.pri:
 C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_scxml.pri:
 C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_scxml_private.pri:
 C:\Qt\5.11.0\msvc2017_64\mkspecs\modules\qt_lib_sensors.pri:
@@ -406,6 +427,7 @@ C:\Qt\5.11.0\msvc2017_64\mkspecs\features\qt_functions.prf:
 C:\Qt\5.11.0\msvc2017_64\mkspecs\features\qt_config.prf:
 C:\Qt\5.11.0\msvc2017_64\mkspecs\win32-msvc\qmake.conf:
 C:\Qt\5.11.0\msvc2017_64\mkspecs\features\spec_post.prf:
+.qmake.stash:
 C:\Qt\5.11.0\msvc2017_64\mkspecs\features\exclusive_builds.prf:
 C:\Qt\5.11.0\msvc2017_64\mkspecs\common\msvc-version.conf:
 C:\Qt\5.11.0\msvc2017_64\mkspecs\features\toolchain.prf:
